# docs/swagger.yaml
@@ -163,6 +163,35 @@ paths:
       summary: Get By ID Data Menu.
       tags:
       - MenuItem
+  /menu/category/{category}:
+    get:
+      consumes:
+      - application/json
+      description: Ambil data menu berdasarkan kategori.
+      parameters:
+      - description: Masukan Kategori
+        in: path
+        name: category
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controller.MenuItem'
+            type: array
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get By Category Data Menu.
+      tags:
+      - MenuItem
   /update/{id}:
     put:
       consumes:
